--- a/resources/fanqie.html
+++ b/resources/fanqie.html
@@ -6,8 +6,8 @@
 <meta name="description" content="欢迎光临九征蔬菜瓜果农场" />
 <meta name="keywords" content="欢迎光临九征蔬菜瓜果农场" />
 <meta name="author" content="欢迎光临九征蔬菜瓜果农场" />
-<link rel="stylesheet" type="text/css" href="/sujiuzheng.com/resources/css/css.css" />
-<link rel="stylesheet" type="text/css" href="/sujiuzheng.com/resources/css/main.css" />
+<link rel="stylesheet" type="text/css" href="/resources/css/css.css" />
+<link rel="stylesheet" type="text/css" href="/resources/css/main.css" />
 
 </head>
 <body>
@@ -21,27 +21,27 @@
             </div>
             <h1>欢迎光临九征蔬菜瓜果农场</h1>
             </div>		 
-            <a><img src="/sujiuzheng.com/resources/images/9cade81d13cdd7a2.gif" style="margin-top:5px; margin-left:5px;"/></a>
+            <a><img src="/resources/images/9cade81d13cdd7a2.gif" style="margin-top:5px; margin-left:5px;"/></a>
         </div>
         <div id="head">		 
             <ul id="nav" style=" width:780px;">
                 <li class="home"></li>
-                <li class="class1" id="nav_8"><a href="/sujiuzheng.com/index.html">首页</a></li>
+                <li class="class1" id="nav_8"><a href="/index.html">首页</a></li>
                 <li class="line"></li>
-                 <li class="class1" id="nav_8"><a href="/sujiuzheng.com/resources/tiangua.html">甜瓜</a></li>
+                 <li class="class1" id="nav_8"><a href="/resources/tiangua.html">甜瓜</a></li>
                 <li class="line"></li>
-                 <li class="class1" id="nav_8"><a href="/sujiuzheng.com/resources/fanqie.html">特色番茄</a></li>
+                 <li class="class1" id="nav_8"><a href="/resources/fanqie.html">特色番茄</a></li>
                 <li class="line"></li>
-                 <li class="class1" id="nav_8"><a href="/sujiuzheng.com/resources/xigua.html">礼品西瓜</a></li>
+                 <li class="class1" id="nav_8"><a href="/resources/xigua.html">礼品西瓜</a></li>
                 <li class="line"></li>
-                 <li class="class1" id="nav_8"><a href="/sujiuzheng.com/resources/jianjie.html">农场简介</a></li>
+                 <li class="class1" id="nav_8"><a href="/resources/jianjie.html">农场简介</a></li>
                 <li class="line"></li>
             </ul>
             <div class="clear"></div>
         </div>
         <div id="KinSlideshow" > 
-                <a href="/sujiuzheng.com/index.html">
-                    <img src="/sujiuzheng.com/resources/images/48a4774e56686a79.jpg" width="990" height="200" alt="" style="border: 0px;">
+                <a href="/index.html">
+                    <img src="/resources/images/48a4774e56686a79.jpg" width="990" height="200" alt="" style="border: 0px;">
                 </a> 
         </div>
         <div id="main">
@@ -53,19 +53,19 @@
                     <div id="web-sidebar">
                         <dl>
                             <dt class="part2 part_out" id="part1-id54">
-                                <b><a href="/sujiuzheng.com/resources/tiangua.html">甜瓜</a></b>
+                                <b><a href="/resources/tiangua.html">甜瓜</a></b>
                             </dt>
                             <dd class="part3dom" style="display: none;"></dd>
                         </dl>	 
                         <dl>
                             <dt class="part2 part_out" id="part1-id55">
-                                <b><a href="/sujiuzheng.com/resources/fanqie.html">特色番茄</a></b>
+                                <b><a href="/resources/fanqie.html">特色番茄</a></b>
                             </dt>
                             <dd class="part3dom" style="display: none;"></dd>
                         </dl>	
                         <dl>
                             <dt class="part2 part_out" id="part1-id56">
-                                <b><a href="/sujiuzheng.com/resources/xigua.html">礼品西瓜</a></b>
+                                <b><a href="/resources/xigua.html">礼品西瓜</a></b>
                             </dt>
                             <dd class="part3dom" style="display: none;"></dd>
                         </dl>
@@ -87,64 +87,64 @@
                 </div>
 	        </div>
             <div id="right">
-                <h3 class="title"><span><a href="/sujiuzheng.com/index.html">首 页</a>&nbsp;&nbsp;&gt;&gt;&nbsp;&nbsp;特色番茄</span></h3>
+                <h3 class="title"><span><a href="/index.html">首 页</a>&nbsp;&nbsp;&gt;&gt;&nbsp;&nbsp;特色番茄</span></h3>
                 <div class="webcontent" style="height: 532px;">
                     <div id="product-list">
                     <div id="plug2">
                         <dl style="height:165px;">
                             <dt style="width:158px;">
-                                <a href="javascript:void(0)" title="甜思美" ><img src="/sujiuzheng.com/resources/images/ebe008b1032bb715.jpg.thumb.jpg" alt="甜思美" title="甜思美"></a>
+                                <a href="javascript:void(0)" title="甜思美" ><img src="/resources/images/ebe008b1032bb715.jpg.thumb.jpg" alt="甜思美" title="甜思美"></a>
                             </dt>
                             <dd style="width:167px;">
                                 <ul>
                                 <li><b>名称 : </b><span class="title"><a href="javascript:void(0)" title="甜思美">甜思美</a></span></li>
                                 <li><b>编号 : </b><span>-----</span></li>
-                                <li><b>分类 : </b><span><a href="/sujiuzheng.com/resources/fanqie.html">特色番茄</a></span></li>
+                                <li><b>分类 : </b><span><a href="/resources/fanqie.html">特色番茄</a></span></li>
                                 <li><b>日期 : </b><span>2014-01-17</span></li>
                                 </ul>
-                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/sujiuzheng.com/resources/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
+                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/resources/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
                             </dd>
                         </dl>
                         <dl style="height:165px;">
                             <dt style="width:158px;">
-                                <a href="javascript:void(0)" title="甜思妮" ><img src="/sujiuzheng.com/resources/images/9a7b44afe1bed08e.jpg.thumb.jpg" alt="甜思妮" title="甜思妮" ></a>
+                                <a href="javascript:void(0)" title="甜思妮" ><img src="/resources/images/9a7b44afe1bed08e.jpg.thumb.jpg" alt="甜思妮" title="甜思妮" ></a>
                             </dt>
                             <dd style="width:167px;">
                                 <ul>
                                 <li><b>名称 : </b><span class="title"><a href="javascript:void(0)" title="甜思妮">甜思妮</a></span></li>
                                 <li><b>编号 : </b><span>-----</span></li>
-                                <li><b>分类 : </b><span><a href="/sujiuzheng.com/resources/fanqie.html">特色番茄</a></span></li>
+                                <li><b>分类 : </b><span><a href="/resources/fanqie.html">特色番茄</a></span></li>
                                 <li><b>日期 : </b><span>2014-01-17</span></li>
                                 </ul>
-                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/sujiuzheng.com/resources/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
+                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/resources/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
                             </dd>
                         </dl>
                         <dl style="height:165px;">
                             <dt style="width:158px;">
-                                <a href="javascript:void(0)" title="绿宝石" ><img src="/sujiuzheng.com/resources/images/0d1d9744f00303c2.jpg.thumb.jpg" alt="绿宝石" title="绿宝石"></a>
+                                <a href="javascript:void(0)" title="绿宝石" ><img src="/resources/images/0d1d9744f00303c2.jpg.thumb.jpg" alt="绿宝石" title="绿宝石"></a>
                             </dt>
                             <dd style="width:167px;">
                                 <ul>
                                 <li><b>名称 : </b><span class="title"><a href="javascript:void(0)" title="绿宝石">绿宝石</a></span></li>
                                 <li><b>编号 : </b><span>-----</span></li>
-                                <li><b>分类 : </b><span><a href="/sujiuzheng.com/resources/fanqie.html">特色番茄</a></span></li>
+                                <li><b>分类 : </b><span><a href="/resources/fanqie.html">特色番茄</a></span></li>
                                 <li><b>日期 : </b><span>2014-01-17</span></li>
                                 </ul>
-                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/sujiuzheng.com/resources/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
+                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/resources/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
                             </dd>
                         </dl>
                         <dl style="height:165px;">
                             <dt style="width:158px;">
-                                <a href="javascript:void(0)" title="黑珍珠" ><img src="/sujiuzheng.com/resources/images/cea035b27dd9a128.jpg.thumb.jpg" alt="黑珍珠" title="黑珍珠" ></a>
+                                <a href="javascript:void(0)" title="黑珍珠" ><img src="/resources/images/cea035b27dd9a128.jpg.thumb.jpg" alt="黑珍珠" title="黑珍珠" ></a>
                             </dt>
                             <dd style="width:167px;">
                                 <ul>
                                 <li><b>名称 : </b><span class="title"><a href="javascript:void(0)" title="黑珍珠">黑珍珠</a></span></li>
                                 <li><b>编号 : </b><span>-----</span></li>
-                                <li><b>分类 : </b><span><a href="/sujiuzheng.com/resources/fanqie.html">特色番茄</a></span></li>
+                                <li><b>分类 : </b><span><a href="/resources/fanqie.html">特色番茄</a></span></li>
                                 <li><b>日期 : </b><span>2014-01-17</span></li>
                                 </ul>
-                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/sujiuzheng.com/resources/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
+                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/resources/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
                             </dd>
                         </dl>
                           
@@ -158,7 +158,7 @@
         </div>
         <div id="footer">
             <div class="nav">
-                <a href="/sujiuzheng.com/resources/jianjie.html">农场简介</a>&nbsp;&nbsp;  联系电话 15550137839
+                <a href="/resources/jianjie.html">农场简介</a>&nbsp;&nbsp;  联系电话 15550137839
             </div>
             
        </div>
